add the section team

--- a/intex.html
+++ b/intex.html
@@ -93,6 +93,7 @@
     </div>
     </section>
     <!--section 5-->
+    <section id="team">
     <div class="bg-gray-100 ">
         <div class="text-center py-10">
             <button class="bg-orange-200 text-orange-800 text-xl px-3 py-1 rounded-lg">Team</button>
@@ -121,6 +122,7 @@
                  </div>
             </div>
     </div>
+    </section>
     <!--section 6-->
         <div class="flex items-center h-150 bg-gray-200 overflow-hidden w-full">
         <div class="bg-white w-full overflow-hidden whitespace-nowrap">
