--- a/intex.html
+++ b/intex.html
@@ -40,7 +40,7 @@
                         </div>
                     </li>
                     <li><a href="" class="hover:underline">contact</a></li>
-                    <li>  <a href="#" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">Sign Up</a></li>
+                    <li>  <a href="login.html" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">login</a></li>
                 </ul>
             </div>
         </nav>
@@ -70,10 +70,11 @@
     <!--section 4-->
     <section id="product">
     <div class="bg-white grid justify-items-center 8 h-screen overflow-auto">
-        <button class="bg-pink-100 text-pink-700 text-xl font-bold px-3 py-2 rounded-lg mt-4">our products</button>
+        <button class="bg-pink-100 text-red-800 text-xl font-bold px-3 py-2 rounded-lg mt-4">our products</button>
         <h1 class="text-5xl font-bold text-black mt-4">Check out our beautiful products</h1>
-        <ul class="text-black font-bold flex space-x-3 mt-4">
+        <ul class="text-black font-bold  text-xl flex space-x-3 mt-4">
             <li><a href="#"class="hover:text-orange-500">All</a></li>
+            <li><a href="#"class="hover:text-orange-500">Image</a></li>
             <li><a href="#"class="hover:text-orange-500">App</a></li>
             <li><a href="#"class="hover:text-orange-500">Card</a></li>
             <li><a href="#"class="hover:text-orange-500">Web</a></li>
@@ -96,8 +97,8 @@
     <section id="team">
     <div class="bg-gray-100 ">
         <div class="text-center py-10">
-            <button class="bg-orange-200 text-orange-800 text-xl px-3 py-1 rounded-lg">Team</button>
-            <h1 class="text-black text-5xl font-bold">Our team is always here to help</h1>
+            <button class="bg-pink-200 text-red-800 text-xl px-3 py-1 rounded-lg font-bold">Team</button>
+            <h1 class="text-black text-5xl font-bold font-bold">Our team is always here to help</h1>
         </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 px-10 py-10">
                 <div class="bg-white shadow-lg rounded-lg p-4">
@@ -127,8 +128,8 @@
         <div class="flex items-center h-150 bg-gray-200 overflow-hidden w-full">
         <div class="bg-white w-full overflow-hidden whitespace-nowrap">
             <div class="text-center py-10">
-                <button class="bg-orange-200 text-orange-800 text-xl px-3 py-1 rounded-lg">Clients</button>
-                <h1 class="text-black text-5xl mt-5">They trusted us</h1>
+                <button class="bg-pink-200 text-red-800 font-bold text-xl px-3 py-1 rounded-lg">Clients</button>
+                <h1 class="text-black text-5xl mt-5 font-bold">They trusted us</h1>
             </div>
             <div class="container mx-auto px-5 md:px-20 grid grid-cols-1 md:grid-cols-10 gap-5 py-10">
                 <img src="./assest2/image/logo1.png" alt="logo 1"class="inline-block animate-marquee">
