--- a/jala.html
+++ b/jala.html
@@ -30,7 +30,7 @@
                         </div>
                     </li>
                     <li><a href="" class="hover:underline">contact</a></li>
-                    <li>  <a href="#" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">Sign Up</a></li>
+                    <li>  <a href="login.html" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">login</a></li>
                 </ul>
             </div>
         </nav>
