--- a/intex.html
+++ b/intex.html
@@ -24,7 +24,8 @@
           
             <div class="text-white flex justify-between items-center">
                 <div class="text-3xl font-bold text-white">
-                       Jala shop
+                       perfume
+                       
                 </div>
                 <ul class="md:flex space-x-7 text-xl font-bold">
                     <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
@@ -36,7 +37,7 @@
                         <div class="relative inline-block text-left">
                             <button class="text-white rounded-md hover:bg-orange-500 focus:outline-black px-2" id="dropdownButton">drop down ▼</button>
                             <div class="absolute hidden mt-2 w-48 bg-white rounded-md shadow-lg overflow-hidden border border-gray-200" id="dropdownMenu">
-                                <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">page</a>
+                                <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
                             </div>
                         </div>
                     </li>
@@ -185,9 +186,9 @@
                 <span class="text-orange-500">web</span>Amigo
             </h2>
                 <ul class="text-white text-xl mt-4">
-                    <li>123,achchelu,Neervely</li>
-                    <li>+94 123 456 789</li>
-                    <li>kaneswaranjalani@gmail.com</li>
+                    <li>📍 123,achchelu,Neervely</li>
+                    <li>📞  +94 123 456 789</li>
+                    <li>📧  kaneswaranjalani@gmail.com</li>
                 </ul>
                 </div>
             <div>
@@ -213,7 +214,7 @@
             <div>
                 <h3 class="text-xl font-bold text-white">Our Social Services</h3>
                 <p class="text-xl mt-4">This is our social services</p>
-                <div class="flex space-x-3 mt-4">
+                <div class="flex space-x-4 mt-4">
                     <a href="#" class="p-2 bg-gray-700 rounded-full">
                         <img src="./assest2/image/twitter.jpg"
                             alt="twitter" class="w-5 h-5"></a>
@@ -226,6 +227,9 @@
                     <a href="#" class="p-2 bg-gray-700 rounded-full">
                         <img src="./assest2/image/linkedin.jpg"
                             alt="linkedin" class="w-5 h-5"></a>
+                    <a href="#" class="p-2 bg-gray-700 rounded-full">
+                         <img src="./assest2/image/instagram.svg"
+                            alt="instra" class="w-5 h-5"></a>
                 </div>
             </div>
             </div>
