--- a/jala.html
+++ b/jala.html
@@ -13,7 +13,7 @@
           
             <div class="text-white flex justify-between items-end px-15 py-0">
                 <div class="text-3xl font-bold text-white">
-                       Jala shop
+                       perfume
                 </div>
                 <ul class="md:flex space-x-7 text-xl font-bold">
                     <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
@@ -25,7 +25,7 @@
                         <div class="relative inline-block text-left">
                             <button class="text-white rounded-md hover:bg-orange-500 focus:outline-black px-2" id="dropdownButton">drop down ▼</button>
                             <div class="absolute hidden mt-2 w-30 bg-white rounded-md shadow-lg overflow-hidden border border-gray-200" id="dropdownMenu">
-                                <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">page</a>
+                                <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
                             </div>
                         </div>
                     </li>
@@ -63,5 +63,10 @@
         </div>
     </div>
     </div>
+    <script>
+        document.getElementById("dropdownButton").addEventListener("click", function () {
+          document.getElementById("dropdownMenu").classList.toggle("hidden");
+        });
+      </script>
 </body>
 </html>
