--- a/jala3.html
+++ b/jala3.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>product 3</title>
+    <title>product3</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
 </head>
 <body>
-    <!--navbar-->
-    <div>
-        <nav class="fixed top-0 left-0 w-full bg-slate-800 p-6 border-b border-black text-left">
+     <!--section 1-->
+     <div>
+        <nav class="fixed top-0 left-0 w-full bg-slate-800 p-10 border-b border-black text-left shadow-md z-50">
           
-            <div class="text-white flex justify-between items-end px-15 py-0">
+            <div class="text-white flex justify-between items-center">
                 <div class="text-3xl font-bold text-white">
                        perfume
+                       
                 </div>
                 <ul class="md:flex space-x-7 text-xl font-bold">
                     <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
@@ -24,46 +26,43 @@
                     <li>
                         <div class="relative inline-block text-left">
                             <button class="text-white rounded-md hover:bg-orange-500 focus:outline-black px-2" id="dropdownButton">drop down ▼</button>
-                            <div class="absolute hidden mt-2 w-30 bg-white rounded-md shadow-lg overflow-hidden border border-gray-200" id="dropdownMenu">
-                                <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
+                            <div class="absolute hidden mt-2 w-48 bg-white rounded-md shadow-lg overflow-hidden border border-gray-200" id="dropdownMenu">
+                                <a href="#" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
                             </div>
                         </div>
                     </li>
-                    <li><a href="" class="hover:underline">contact</a></li>
+                    <li><a href="product.html" class="hover:underline">details</a></li>
                     <li>  <a href="login.html" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">login</a></li>
                 </ul>
             </div>
         </nav>
       </div>
      </div>
-    <!--product 1-->
-    <div>
-    <div class="bg-orange-100 p-35 grid grid-cols-1 md:grid-cols-2">
+     <!--product 3-->
+     <div class="bg-sky-100 p-35 grid grid-cols-1 md:grid-cols-2">
         <div class="h-160 w-150">
-            <img class="shadow-2xl rounded-2xl" src="./assest2/image/men4.jpeg" alt="detail 3">
+            <img class="shadow-2xl rounded-2xl" src="./assest2/image/men1.jpeg" alt="detail 2">
         </div>
         <div class="grid-cols-2">
-        <div class="bg-gray-200 py-10 px-10 shadow-xl rounded-2xl">
-            <h1 class="font-bold text-3xl mb-4">product information</h1>
-            <hr>
-            <ul class="font-bold text-xl mt-5">
-                <li>Cateory : web Design</li>
-                <li>client : abc company</li>
-                <li>project date : 1 january 2023</li>
-                <li>url : www.example3.com</li>
-            </ul>
-        </div>
-        <div class="bg-gray-100 mt-5 py-10 px-10 shadow-xl rounded-2xl">
-            <h1 class="font-bold text-5xl mt-5">This is an example for product detail</h1>
-            <p class="font-bold text-xl italic text-gray-500 mt-5">
-                Creed is a luxury fragrance house known for its high-quality, handcrafted perfumes. Founded in 1760, Creed has a rich history of creating scents for royalty and celebrities. The brand is famous for using high-quality, natural ingredients and a time-consuming infusion technique that ensures depth and complexity in their fragrances.
-
-            </p>
-        </div>
+            <div class="bg-gray-200 py-10 px-10 shadow-xl rounded-2xl">
+                <h1 class="font-bold text-3xl mb-4">Product Information</h1>
+                <hr>
+                <ul class="font-bold text-xl mt-5">
+                    <li>Category: Web Design</li>
+                    <li>Client: Art Company</li>
+                    <li>Project Date: 16 Sep 2023</li>
+                    <li>URL: www.example2.com</li>
+                </ul>
+            </div>
+            <div class="bg-gray-100 mt-5 py-10 px-10 shadow-xl rounded-2xl">
+                <h1 class="font-bold text-5xl mt-5">This is an example for product detail</h1>
+                <p class="font-bold text-xl italic text-gray-500 mt-5">
+                    Versace Eros Eau de Parfum is the perfect fragrance for confident men.
+                </p>
+            </div>
         </div>
     </div>
-    </div>
-    <script>
+     <script>
         document.getElementById("dropdownButton").addEventListener("click", function () {
           document.getElementById("dropdownMenu").classList.toggle("hidden");
         });
