--- a/login.html
+++ b/login.html
@@ -20,17 +20,17 @@
                 <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
                 <li><a href="intex.html#about" class="hover:underline">About</a></li>
                 <li><a href="intex.html#services" class="hover:underline">Services</a></li>
-                <li><a href="intex.html#product" class="hover:underline">protect</a></li>
+                <li><a href="intex.html#product" class="hover:underline">product</a></li>
                 <li><a href="intex.html#team" class="hover:underline">team</a></li>
                 <li>
                     <div class="relative inline-block text-left">
                         <button class="text-white rounded-md hover:bg-orange-500 focus:outline-black px-2" id="dropdownButton">drop down ▼</button>
                         <div class="absolute hidden mt-2 w-48 bg-white rounded-md shadow-lg overflow-hidden border border-gray-200" id="dropdownMenu">
-                            <a href="contact.html" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
+                            <a href="#" class="block px-4 py-2 text-gray-700 font-bold hover:bg-gray-100">feedback</a>
                         </div>
                     </div>
                 </li>
-                <li><a href="" class="hover:underline">contact</a></li>
+                <li><a href="product.html" class="hover:underline">details</a></li>
                 <li>  <a href="login.html" class="bg-orange-500 px-4 py-2 rounded-lg text-white hover:text-black transition ">login</a></li>
             </ul>
         </div>
