--- a/intex.html
+++ b/intex.html
@@ -237,9 +237,13 @@
     </div>
     <!--section 8-->
      <div>
-        <nav class="bg-sky-950 p-3 grid justify-items-center 8">
-            <h3 class=" text-2xl text-white ">uki,cohort 11,by:  K. jalani</h3>
-
+        <nav class="bg-sky-950 p-3 flex">
+            <div>
+                <h3 class="text-2xl text-white mr-25 px-6">copy right@,2025, all high resevered</h3>
+            </div>
+            <div>
+            <h3 class=" text-2xl text-white ml-230">uki,cohort 11,by:  K. jalani</h3>
+            </div>
         </nav>
      </div>
     <script>
