--- a/jala.html
+++ b/jala.html
@@ -16,11 +16,11 @@
                        perfume
                 </div>
                 <ul class="md:flex space-x-7 text-xl font-bold">
-                    <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
-                    <li><a href="intex.html#about" class="hover:underline">About</a></li>
-                    <li><a href="intex.html#services" class="hover:underline">Services</a></li>
-                    <li><a href="intex.html#product" class="hover:underline">product</a></li>
-                    <li><a href="intex.html#team" class="hover:underline">team</a></li>
+                    <li><a href="index.html" class=" text-white hover:underline">Home</a></li>
+                    <li><a href="index.html#about" class="hover:underline">About</a></li>
+                    <li><a href="index.html#services" class="hover:underline">Services</a></li>
+                    <li><a href="index.html#product" class="hover:underline">product</a></li>
+                    <li><a href="index.html#team" class="hover:underline">team</a></li>
                     <li>
                         <div class="relative inline-block text-left">
                             <button class="text-white rounded-md hover:bg-orange-500 focus:outline-black px-2" id="dropdownButton">drop down ▼</button>
