--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
                        
                 </div>
                 <ul class="md:flex space-x-7 text-xl font-bold">
-                    <li><a href="intex.html" class=" text-white hover:underline">Home</a></li>
+                    <li><a href="./index.html" class=" text-white hover:underline">Home</a></li>
                     <li><a href="#about" class="hover:underline">About</a></li>
                     <li><a href="#services" class="hover:underline">Services</a></li>
                     <li><a href="#product" class="hover:underline">product</a></li>
